# cli-root-yo

./: .gitignore  MANIFEST.in  README.md  SPEC.md  SPEC_IMPLEMENTATION_PLAN.md  pyproject.toml
.ignore/: gpt_5.2_pro_extended_prompt_response_spec.md  gpt_5.2_pro_extended_prompt_response_spec_fine_tuning_by_auto.md  initial_augment_claude_4.6_prompt.md
cli_core_yo/: __init__.py  app.py  errors.py  output.py  plugins.py  registry.py  runtime.py  spec.py  xdg.py
cli_root_yo/: __init__.py  app.py  errors.py  output.py  plugins.py  registry.py  runtime.py  spec.py  xdg.py
tests/: conftest.py  test_app.py  test_errors.py  test_output.py  test_plugins.py  test_registry.py  test_runtime.py  test_spec.py  test_xdg.py
